                          WebAuth Change History

WebAuth 3.4.1 (unreleased)

 *) Reverted the change in 3.4.0 to not strip WebAuth data from the URLs
    for unprotected URLs, since URLs with protection applied via .htaccess
    files aren't detected early enough in request processing to be
    recognized in the translation hook and look like they're unprotected.

 *) Support et/com_err.h as well as com_err.h for portability to Red Hat
    Enterprise Linux 4 and possibly other newer Red Hat-based Linux
    systems.

WebAuth 3.4.0 (2006-01-24)

 *) Added support to the weblogin server and WebKDC module to trust an
    authentication identity asserted by Apache.  This allows use of any
    authentication type that Apache supports as WebAuth authentication, in
    particular SPNEGO/GSSAPI.

 *) Allow login.fcgi to be used as the target of an ErrorDocument Apache
    directive and read the query parameters from the redirect environment
    variable.  This lets one use SPNEGO as the default and fall back on
    password authentication if it fails.  To support this feature, there
    is an additional template variable for the login template,
    script_name, that should be used as the action of the login form.

 *) The WebAuth module no longer strips WebAuth data (WEBAUTHR and
    WEBAUTHS) from the internal URL for requests to URLs not protected by
    WebAuth.  This way, Apache with mod_webauth loaded will not interfere
    with applications that wish to implement the WebAuth protocol
    themselves.   Thanks to Mats Henrikson for the report.

 *) Rewrote the WebAuth protocol documentation in RFC 2629 XML.  In the
    process, edited it extensively for consistency of terminology, updated
    it in a few places, and clarified the wording.

 *) Updated the Kerberos library probes in configure to use krb5-config
    where appropriate and to check for krb5support (MIT Kerberos 1.4) if
    krb5-config isn't available.
